# polypaper

./: .gitignore  Cargo.toml  README.md  agentic_research_loop.py  dashboard.py  pyproject.toml  search_space.example.json  spread_monitor.py  tournament.spec.example.json
cli/: Cargo.toml
cli/src/: auth.rs  config.rs  main.rs
cli/src/commands/: clob.rs  comments.rs  events.rs  markets.rs  mod.rs  profiles.rs  series.rs  setup.rs  sports.rs  tags.rs  wallet.rs
cli/src/output/: bridge.rs  clob.rs  comments.rs  data.rs  events.rs  markets.rs  mod.rs  profiles.rs  series.rs  sports.rs  tags.rs
cli/tests/: cli_integration.rs
docs/: algorithm-authoring.md  autonomous-search-layer.md
plugins/: adaptive_risk_sizer.py  discover_alpha_model.py
polytrader/: cli.py  db.py  engine.py  fill_engine.py  market_data.py  registry.py  specs.py  types.py
polytrader/models/: always_pass.py  base.py  kelly_gbm.py
polytrader/sizers/: base.py  equal_weight.py  fixed.py  kelly.py
research/agent_a/: model.py
