[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polytrader"
version = "0.1.0"
description = "Agent-first paper trading framework for Polymarket."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "polytrader contributors" }]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
]

[project.scripts]
polytrader = "polytrader.cli:app"

[tool.setuptools]
packages = ["polytrader", "polytrader.models", "polytrader.sizers"]
